<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">gifted</string>
    <string name="action_settings">Settings</string>
    <string name="druid_question">Is the gift recipient a Druid?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_birthday">Please enter your date of birth in the fields below.</string>
    <string name="year_hint">YYYY</string>
    <string name="month_hint">MM</string>
    <string name="day_hint">DD</string>
    <string name="monkey">Monkey</string>
    <string name="sheep">Sheep</string>
    <string name="horse">Horse</string>
    <string name="rat">Rat</string>
    <string name="ox">Ox</string>
    <string name="tiger">Tiger</string>
    <string name="rooster">Rooster</string>
    <string name="dragon">Dragon</string>
    <string name="pig">Pig</string>
    <string name="snake">Snake</string>
    <string name="rabbit">Rabbit</string>
    <string name="dog">Dog</string>
    <string name="your_zodiac_sign_is">Your zodiac sign is…</string>
    <string name="search">What\'s my zodiac sign?</string>
    <string name="invalid_date">You did not provide a valid date.</string>
    <string name="enter_interests">What is the gift recipient\'s top interest?</string>
    <string name="search_ETSY">Search Etsy</string>
    <string name="interest_hint">Enter interest here</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove from favorites</string>
    <string name="add_to_favortie">Add to favorites</string>
    <string name="journal">journal</string>
    <string name="farm">farm</string>
    <string name="hand_quilted">hand quilted</string>
    <string name="embroidery">embroidery</string>
    <string name="jigsaw_puzzle">jigsaw puzzle</string>
    <string name="candle">candle</string>
    <string name="plants">plants</string>
    <string name="tea">tea</string>
    <string name="beer_kit">beer kit</string>
    <string name="canned_goods">canned goods</string>


</resources>
