<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/input_birthday"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/enter_birthday"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <EditText
            android:id="@+id/year"
            android:hint="@string/year_hint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/month"
            android:hint="@string/month_hint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/day"
            android:hint="@string/day_hint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>


        </LinearLayout>
</LinearLayout>