<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan">

    <TextView
        android:id="@+id/input_interest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_interests"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/red"/>

    <EditText
        android:id="@+id/interest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/interest_hint"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/search_interest_ETSY"
        style="@style/buttonTextColorAndSize"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_ETSY"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_edge_button"/>

</LinearLayout>