<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/tan">
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="30dp"
        android:text="@string/druid_question"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp">
        <Button
            android:id="@+id/yes_druid"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/yes"
            android:textColor="@color/tan"
            android:background="@drawable/round_edge_button"/>
        <Button
            android:id="@+id/no_druid"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/no"
            android:textColor="@color/tan"
            android:background="@drawable/round_edge_button"/>
    </LinearLayout>

</LinearLayout>