<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/input_interests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_interests"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="#ddbb00"/>

    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="350dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_gravity="center">-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/interest_hint"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
        <!--<EditText-->
            <!--android:id="@+id/interest1"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="2"-->
            <!--android:textColor="#ddbb00"-->
            <!--android:textSize="35sp"/>-->

        <!--<EditText-->
            <!--android:id="@+id/interest2"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textColor="#ddbb00"-->
            <!--android:textSize="35sp"/>-->

        <!--<EditText-->
            <!--android:id="@+id/interest3"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:textColor="#ddbb00"-->
            <!--android:textSize="35sp"/>-->

    <!--</LinearLayout>-->

    <Button
        android:id="@+id/search_interests_ETSY"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/search_ETSY"
        android:textSize="25sp"
        android:layout_marginTop="60dp"/>

</LinearLayout>